<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/large_margin"
    >

<ImageView
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/intro_graphic"
    android:layout_margin="@dimen/large_margin"
    android:layout_gravity="center"
/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:text="@string/have_script_fill"
    android:layout_gravity="center"
    android:id="@+id/have_script"
    
    />
    
 <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:text="@string/need_script_fill"
    android:layout_gravity="center"
    android:id="@+id/need_script"
     />
     
  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:text="@string/dashboard"
    android:layout_gravity="center"
    android:id="@+id/dashboard"
   />
</LinearLayout>
